--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,14 @@
 <% include partials/header %>
 
+  <section class="container">
+    <article>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente quasi veniam voluptas architecto id ullam distinctio! Saepe commodi totam cupiditate ut assumenda nostrum accusantium voluptatibus veritatis perspiciatis eos eligendi dicta itaque id sequi modi excepturi earum quod maxime, dolorum, ea voluptatum. At tempora non, voluptatem minima corporis, est modi aut recusandae sint, molestiae culpa dolorum! Quasi quod, tempora neque mollitia vero, cum itaque sapiente distinctio quis, eaque qui ab. Perspiciatis quam fuga perferendis, voluptates magnam error aut in tempora itaque atque aperiam neque. Sint praesentium harum vitae vel quisquam! Architecto, repellendus vitae. Tempore modi eveniet in consequuntur asperiores nam ad.</p>
+    </article>
+    <aside>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam minus eius, veritatis, vero assumenda nobis a perferendis libero tempore voluptas ducimus, sunt fugiat, similique enim ea. Ipsam reprehenderit aspernatur similique molestias at quos aliquam a alias odit tempora ut eius labore cum autem unde suscipit officia ea iure, nesciunt doloremque.</p>
+    </aside>
+  </section>
 
-<h1><a href="/sign-up">YOOOO</a></h1>
-
-<script src=""></script>
 <% include partials/footer %>
 
-<!-- Color Scheme:  -->
+<!-- Color Scheme: #ffd11a,  -->
