--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,7 @@
+  <footer>
+    <h3>&copy;Credit Repair Corp.</h3>
+    <h3><a href="/contact">Contact Us</a></h3>
+  </footer>
+  <script src="main.js"></script>
 </body>
 </html>
