--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,3 +8,16 @@
   <title>Credit Repair</title>
 </head>
 <body>
+  <header>
+    <h1 id="title">Credit Repair</h1>
+    <nav>
+      <ul class="menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/log-in">Log-In</a></li>
+        <li><a href="/sign-up">Sign-Up</a></li>
+        <li><a href="/profile">Profile</a></li>
+        <li><a href="/contact">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
